UPD: Continuing on runway configuration implementation. Rewriting tower. Uncompilable.